# ha-integration-kubernetes

./: CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml  hacs.json  pyproject.toml  renovate.json
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
custom_components/kubernetes/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  entity.py  manifest.json  number.py  sensor.py  strings.json
tests/: conftest.py  test_coordinator.py
tests/fixtures/: kind-config.yaml  nginx.yaml
